--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -1,3 +1,4 @@
-body {
-  background-color: blue;
-}
+$fa-font-path: "~font-awesome/fonts";
+@import '~font-awesome/scss/font-awesome.scss';
+
+@import "base";
