--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -1,4 +1,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import '~font-awesome/scss/font-awesome.scss';
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:regular,italic,700,700italic,900,900italic|Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic");
+
+@import "~bootstrap/scss/bootstrap";
 
 @import "base";
