--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.getLocale() }}">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <meta name="HandheldFriendly" content="true">
+
+       <meta name="description" content="{{ 'app.seo.description'|trans }} ">
+       <meta name="keywords" content="{{ 'app.seo.keywords'|trans }} ">
+            {#todo      <meta name="robots" content="index, follow">#}
+
+      <title>{% block title %}{{ 'app.common.title'|trans }}{% endblock %}</title>
+
+{#todo      <meta property="og:title" content="{{ 'app.common.title'|trans }} ">
+      <meta property="og:type" content="website">
+      <meta property="og:image" content="images/content/facebook-share-image.jpg">
+      <meta property="og:description" content="{{ 'app.seo.description'|trans }} ">
+
+      <meta property="og:url" content="todo:sitename">
+
+      <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
+      <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+      <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+      <link rel="canonical" href="todo:sitename">#}
+
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    <body>
+    <div class="container-fluid">
+      <div class="content">
+        <header>
+          <div class="row flex-nowrap justify-content-between align-items-center">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-7 logo ">{{ 'app.menu.logo' | trans }}</div>
+
+
+            <div class="d-flexjustify-content-end align-items-center header-links">
+              <nav class="float-right">
+                <a class="p-2 text-dark" href="#">{{ 'app.menu.nav.portfolio' | trans }}</a>
+                <a class="p-2 text-dark" href="#">{{ 'app.menu.nav.about-me' | trans }}</a>
+                <a class="p-2 text-dark" href="#">{{ 'app.menu.nav.contact' | trans }}</a>
+              </nav>
+            </div>
+          </div>
+        </header>
+        <div class="container-fluid main-content">
+          {% block body %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+
+        {% block javascripts %}
+          <script type="text/javascript" src="{{  asset('js/index.js') }}"></script>
+        {% endblock %}
     </body>
+    <style>
+      .debug {
+        border: 1px solid red;
+      }
+    </style>
 </html>
