--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -5,4 +5,4 @@ $fa-font-path: "~font-awesome/fonts";
 @import "~bootstrap/scss/bootstrap";
 
 @import "base";
-@import "images";
+@import "pages/index";
