--- a/deployment/templates/index/index.html.twig
+++ b/deployment/templates/index/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
   <div class="row">
     <div class="col">
-       <div class="welcome-image-container" data-src="/images/main/welcome.jpg">
+       <div class="welcome-image-container" data-src="/assets/images/main/welcome.jpg">
          <div class="image-cover"><span class="text-highligh">{{ 'app.welcome.comming' | trans }}</span>
            {{ 'app.welcome.sooon' | trans }}
          </div>
