--- a/templates/index/experiment.html.twig
+++ b/templates/index/experiment.html.twig
@@ -9,15 +9,14 @@
 
 {% endblock %}#}
 {% block body %}
-{#  <div class="carousel">
+  <div class="carousel">
     <img data-lazy="{{ asset('images/carousel/carousel-1.jpg') }}"/>
     <img data-lazy="{{ asset('images/carousel/carousel-2.jpg') }}"/>
     <img data-lazy="{{ asset('images/carousel/carousel-3.jpg') }}"/>
     <img data-lazy="{{ asset('images/carousel/carousel-4.jpg') }}"/>
     <img data-lazy="{{ asset('images/carousel/carousel-5.jpg') }}"/>
-  </div>#}
-  <div>
-    <img src="{{ asset('images/carousel/carousel-5.jpg') }}" style="display: block; margin-left: auto; margin-right: auto; width: 70%;"/>
+    <img data-lazy="{{ asset('images/carousel/carousel-6.jpg') }}"/>
+    <img data-lazy="{{ asset('images/carousel/carousel-7.png') }}"/>
   </div>
 {% endblock %}
 {#
