--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -19,11 +19,16 @@
   <div>
     <img src="{{ asset('images/carousel/carousel-5.jpg') }}" style="display: block; margin-left: auto; margin-right: auto; width: 70%;"/>
   </div>
+
+  <span id="clickme">Click me</span>
 {% endblock %}
-{#
+
 
     {% block javascripts %}
       {{ parent() }}
-      <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
-
-    {% endblock %}#}
+      <script type="text/javascript">
+        $('#clickme').on('click', function() {
+          alert('clicked');
+        });
+      </script>
+    {% endblock %}
